2024-11-27-rs/tests/snapshots/golden_master__golden_master_1_day.snap
---
source: tests/golden-master.rs
expression: items
snapshot_kind: text
---
- name: +5 Dexterity Vest
  sell_in: 9
  quality: 19
- name: Aged Brie
  sell_in: 1
  quality: 1
- name: Elixir of the Mongoose
  sell_in: 4
  quality: 6
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: 0
  quality: 80
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: -1
  quality: 80
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 14
  quality: 21
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 9
  quality: 50
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: 4
  quality: 50
