2024-11-27-rs/tests/snapshots/golden_master__golden_master_30_days.snap
---
source: tests/golden-master.rs
expression: items
snapshot_kind: text
---
- name: +5 Dexterity Vest
  sell_in: -20
  quality: 0
- name: Aged Brie
  sell_in: -28
  quality: 50
- name: Elixir of the Mongoose
  sell_in: -25
  quality: 0
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: 0
  quality: 80
- name: "Sulfuras, Hand of Ragnaros"
  sell_in: -1
  quality: 80
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: -15
  quality: 0
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: -20
  quality: 0
- name: Backstage passes to a TAFKAL80ETC concert
  sell_in: -25
  quality: 0
